UI progress and MusicService started

--- a/MusicApp.Music.MusicService/appsettings.json
+++ b/MusicApp.Music.MusicService/appsettings.json
@@ -6,7 +6,13 @@
     }
   },
   "ConnectionStrings": {
-    "MusicDbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MusicDataBase;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "MusicDbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MusicDataBase;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "ProductionMusic": "Server=tcp:musicservice.database.windows.net,1433;Initial Catalog=MusicDataBase;Persist Security Info=False;User ID=ibrahim;Password=PenahliNET2008@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "Cloudinary": {
+    "CloudName": "dff8ncn2q",
+    "ApiKey": "396774655794669",
+    "ApiSecret": "EuqK1-xpDkqYGuJBdmI_8xgvwNQ"
   },
   "AllowedHosts": "*"
 }
