--- a/MusicApp.Music.MusicService/appsettings.json
+++ b/MusicApp.Music.MusicService/appsettings.json
@@ -7,7 +7,8 @@
   },
   "ConnectionStrings": {
     "MusicDbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MusicDataBase;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
-    "ProductionMusic": "Server=tcp:musicservice.database.windows.net,1433;Initial Catalog=MusicDataBase;Persist Security Info=False;User ID=ibrahim;Password=PenahliNET2008@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "ProductionMusic": "Server=tcp:musicservice.database.windows.net,1433;Initial Catalog=MusicDataBase;Persist Security Info=False;User ID=ibrahim;Password=PenahliNET2008@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "ProductionIdentity": "Server=tcp:musicidentityserver.database.windows.net,1433;Initial Catalog=IdentityDataBase;Persist Security Info=False;User ID=ibrahim;Password=PenahliNET2008@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Cloudinary": {
     "CloudName": "dff8ncn2q",
