--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,13 @@
 version: '3.8'
 
 services:
+  redis:
+    image: redis
+    container_name: redis-server
+    ports:
+      - "6379:6379"   
+    networks:
+      - app-network
   api-gateway:
     image: api-gateway:dev  
     build:
@@ -32,6 +39,8 @@ services:
       dockerfile: musicapp.music.musicservice/Dockerfile  
     ports:
       - "7002:8080"  
+    depends_on:
+      - redis
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     networks:
