--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,21 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
     networks:
       - app-network
+  
+  uiapp:
+    build:
+      context: ./musicapp.webui.react
+      dockerfile: Dockerfile
+    container_name: musicapp-ui
+    ports:
+      - "5173:5173"  # Vite'default port
+    environment:
+      - NODE_ENV=development
+      - CHOKIDAR_USEPOLLING=true
+    stdin_open: true
+    tty: true
+    networks:
+      - app-network
 
 networks:
   app-network:
